header updated (Sveta)

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section-about">
+<section id="description" class="section-about">
   <div class="container">
     <span class="about__subtitle">tradition and love</span>
     <h2 class="about__title">how it’s made?</h2>
