--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section-contacts">
+<section id="contacts" class="section-contacts">
   <div class="container">
     <h2 class="contacts__title visually-hidden">Contacts</h2>
 
