--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,41 +1,51 @@
 <main>
-    <section class="section-products">
-        <div class="container">
-            <h2 class="section-products__title">
-                <span class="section-products__label">100% natural</span>
-                products
-            </h2>
-            
-        <ul class="products list">
-            <li class="products__item">
-                <h3 class="products__subtitle">ice cream</h3>
-                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <a href="" class="products__link">
-                    <svg class="products__icon" width="40" height="40">
-                        <use href="./images/sprite.svg#arrow-right"></use>
-                    </svg>
-                </a>
-            </li>
+  <section id="products" class="section-products">
+    <div class="container">
+      <h2 class="section-products__title">
+        <span class="section-products__label">100% natural</span>
+        products
+      </h2>
 
-            <li class="products__item">
-                <h3 class="products__subtitle">ice coffee</h3>
-                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <a href="" class="products__link">
-                    <svg class="products__icon" width="40" height="40">
-                        <use href="./images/sprite.svg#arrow-right"></use>
-                    </svg>
-                </a>
-            </li>
+      <ul class="products list">
+        <li class="products__item">
+          <h3 class="products__subtitle">ice cream</h3>
+          <p class="products__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et. dolore magna aliqua facilisis.
+          </p>
+          <a href="" class="products__link">
+            <svg class="products__icon" width="40" height="40">
+              <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+          </a>
+        </li>
 
-            <li class="products__item">
-                <h3 class="products__subtitle">milkshakes</h3>
-                <p class="products__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <a href="" class="products__link">
-                    <svg class="products__icon" width="40" height="40">
-                        <use href="./images/sprite.svg#arrow-right"></use>
-                    </svg>
-                </a>
-            </li>
-            </ul>
-        </div>
-    </section>
+        <li class="products__item">
+          <h3 class="products__subtitle">ice coffee</h3>
+          <p class="products__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et. dolore magna aliqua facilisis.
+          </p>
+          <a href="" class="products__link">
+            <svg class="products__icon" width="40" height="40">
+              <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="products__item">
+          <h3 class="products__subtitle">milkshakes</h3>
+          <p class="products__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et. dolore magna aliqua facilisis.
+          </p>
+          <a href="" class="products__link">
+            <svg class="products__icon" width="40" height="40">
+              <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+</main>
