--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section-reviews">
+<section id="about" class="section-reviews">
   <div class="container">
     <h2 class="section-reviews__title visually-hidden"></h2>
     <div class="slider reviews list">
