Pre-deploy update

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -6,37 +6,19 @@
   background-size: contain;
   padding-top: 125px;
   padding-bottom: 39px;
-
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     background-image: url('../images/about/background-320-1@2x.png');
   }
-
   @media screen and (min-width: 768px) {
     background-image: none;
     padding-bottom: 67px;
   }
-
-    @media screen and (min-width: 768px) {
-        background-image: none;
-        padding-bottom: 67px;
-    }
-
-
-    @media screen and (min-width: 1280px) {
-        background-image: url("../images/about/background-1280-1.png"); 
-        background-position: 0% 104%;
-        padding-bottom: 138px;
-    
-
-        @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-            background-image: url("../images/about/background-1280-1@2x.png"); 
-        }
-
-
+  @media screen and (min-width: 1280px) {
+    background-image: url('../images/about/background-1280-1.png');
+    background-position: 0% 104%;
+    padding-bottom: 138px;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
@@ -44,123 +26,93 @@
     }
   }
 }
-
 .section-about .container {
   // width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   @media screen and (min-width: 768px) {
     display: block;
     position: relative;
   }
 }
-
 .about {
   display: block;
-
-.about::before {
-    content: "";
-    display: block;
-    background-image: url("../images/about/mobile-1.png");
-    width: 280px;
-    height: 280px;
-    background-size: 280px 280px;
-
-        @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-            background-image: url("../images/about/mobile-1@2x.png"); 
-    }
-
-    @media screen and (min-width: 768px) {
-        content: "";
-        background-image: url("../images/about/tablet-1.png");
-        width: 340px;
-        height: 340px;
-        position: absolute;
-        background-size: 340px 340px;
-        left: 20px;  
-        top: 155px; 
-
-            @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                background-image: url("../images/about/tablet-1@2x.png");
-            }
-    }
-
-    @media screen and (min-width: 1280px) {
-        content: "";
-        background-image: url("../images/about/desctop-1.png");
-        background-size: 516px 516px;
-        position: absolute;
-        width: 516px;
-        height: 516px;
-        left: 18px;  
-        top: 190px; 
-
-            @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                background-image: url("../images/about/desctop-1@2x.png");
-            }
-    }
-
-
-}
-
-.about::before {
-  content: url('../images/about/mobile-1.png');
-
-  // @media screen and (min-device-pixel-ratio: 2),
-  // screen and (min-resolution: 192dpi),
-  // screen and (min-resolution: 2dppx) {
-  //     content: url("../images/about/mobile-1@2x.png");
-  // }
-
   @media screen and (min-width: 768px) {
-    content: url('../images/about/tablet-1.png');
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+.about::before {
+  content: '';
+  display: block;
+  background-image: url('../images/about/mobile-1.png');
+  width: 280px;
+  height: 280px;
+  background-size: 280px 280px;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url('../images/about/mobile-1@2x.png');
+  }
+  @media screen and (min-width: 768px) {
+    content: '';
+    background-image: url('../images/about/tablet-1.png');
+    width: 340px;
+    height: 340px;
     position: absolute;
+    background-size: 340px 340px;
     left: 20px;
     top: 155px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/about/tablet-1@2x.png');
+    }
   }
-
   @media screen and (min-width: 1280px) {
-    content: url('../images/about/desctop-1.png');
+    content: '';
+    background-image: url('../images/about/desctop-1.png');
+    background-size: 516px 516px;
     position: absolute;
+    width: 516px;
+    height: 516px;
     left: 18px;
     top: 190px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url('../images/about/desctop-1@2x.png');
+    }
   }
 }
 
 .about__title {
-    font-family: 'Titan One', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 34px;
-    line-height: 39px;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #D41443;
-    margin-bottom: 30px;
-    
+  font-family: 'Titan One', cursive;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 39px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  margin-bottom: 30px;
 
-    @media screen and (min-width: 768px) {
-        margin-bottom: 50px;
-        font-size: 48px;
-        line-height: 55px;
-    }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 50px;
+    font-size: 48px;
+    line-height: 55px;
+  }
 
-    @media screen and (min-width: 1280px) {
-        font-size: 58px;
-        line-height: 66px;
-        letter-spacing: 0.06em;
-        margin-bottom: 102px;
-    }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 66px;
+    letter-spacing: 0.06em;
+    margin-bottom: 102px;
+  }
 }
 
 .about__subtitle {
@@ -185,7 +137,6 @@
     line-height: 34px;
     letter-spacing: 0.04em;
   }
-
 }
 
 .about_image {
