--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,26 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+// @import './example';
+@import './utils/variables';
+@import './utils/vissually-hidden';
+@import './utils/mixin';
+
+@import './base/common';
+@import './base/container';
+
+@import './components/logo';
+@import './components/button';
+@import './components/title';
+@import './components/social-list';
+@import './components/navigation';
+@import './components/backdrop';
+@import './components/burger-button';
+@import './components/mobile-menu';
+@import './components/form';
+@import './components/contacts';
+@import './components/contacts__map';
+
+@import './layout/header';
+@import './layout/footer';
+
