--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -4,7 +4,7 @@
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
   <img src="images/demo.jpg" alt="" width="320" />
   <p>
-    Плагин
+    Плагин1
     <a
       href="https://github.com/posthtml/posthtml-include"
       target="_blank"
