--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,7 +4,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum reprehenderit, ad dicta nam,
       corrupti, provident amet repellat nihil recusandae earum vitae incidunt voluptatibus assumenda
-      aut praesentium et quo perspiciatis! Tenetur.
+      aut praesentium et quo perspiciatis! Tenetur. <a href="">Lorem, ipsum.</a>
     </p>
   </div>
 </section>
