--- a/src/sass/components/_our_works.scss
+++ b/src/sass/components/_our_works.scss
@@ -63,7 +63,10 @@
     border: 1px solid #E0E0E0;
 }
     &__icon {
+      position: relative;
     display: flex;
+align-items: center;
+justify-content: center;
     width: 90px;
     height: 90px;
     border-radius: 50%;
@@ -71,8 +74,10 @@
     box-sizing: border-box;
   }
   &__icon--pos{
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50, -50);
   }
   
 }
