Доделал футер и наши работы
Доделал футер и наши работы

--- a/src/partials/our_work.html
+++ b/src/partials/our_work.html
@@ -1,4 +1,5 @@
 <section class="our-works">
+    <div class="container">
     <h1 class="our-works__title">Мы создаем мобильные приложения
         для крупных корпораций</h1>
     <p class="our-works__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
@@ -7,9 +8,11 @@
             <ul class="our-works__list-wraper list">
                 <li class="our-works__wraper-item">
                     <div class="our-works__icon-wrapper">
-                    <svg class="our-works__icon">
-                    <use class="our-works__icon--pos" width="40" height="40" href="./images/sprite.svg/#icon-project"></use>
-                    </svg>
+                        <div class="our-works__icon-wrapper-2">
+                        <svg class="our-works__icon" >
+                            <use href="./images/sprite.svg/#icon-project"></use>
+                        </svg>
+                        </div>
                     </div>
                 </li>
                 <li class="our-works__wraper-item">
@@ -22,11 +25,13 @@
             <ul class="our-works__list-wraper list">
                 <li class="our-works__wraper-item">
                     <div class="our-works__icon-wrapper">
-                    <svg class="our-works__icon">
-                    <use class="our-works__icon--pos" width="40" height="40" href="./images/sprite.svg/#icon-project"></use>
-                    </svg>
+                        <div class="our-works__icon-wrapper-2">
+                        <svg class="our-works__icon" >
+                            <use href="./images/sprite.svg/#icon-project"></use>
+                        </svg>
+                        </div>
                     </div>
-                    </li>
+                </li>
                 <li class="our-works__wraper-item">
                     <h3 class="our-works__item-title">Создание сайтов</h3>
                     <p class="our-works__item-text">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>                        
@@ -37,19 +42,22 @@
             <ul class="our-works__list-wraper list">
                 <li class="our-works__wraper-item">
                     <div class="our-works__icon-wrapper">
-                    <svg class="our-works__icon" >
-                    <use class="our-works__icon--pos" width="40" height="40" href="./images/sprite.svg/#icon-project"></use>
-                    </svg>
+                        <div class="our-works__icon-wrapper-2">
+                        <svg class="our-works__icon" >
+                            <use href="./images/sprite.svg/#icon-project"></use>
+                        </svg>
+                        </div>
                     </div>
-                    </li>
+                </li>
                 <li class="our-works__wraper-item">
                     <h3 class="our-works__item-title">Создание сайтов</h3>
                     <p class="our-works__item-text">Lorem Ipsum - это текст- "рыба", часто используе в печати и вэб-дизайне.</p>                        
                 </li>
             </ul>
-        </li>        
+        </li>      
     </ul>
         <button class="button" type="button">
         <a class="button__text link" href="#">Все услуги</a>
     </button>
+</div>
 </section>
