--- a/src/sass/layouts/_our_works.scss
+++ b/src/sass/layouts/_our_works.scss
@@ -36,11 +36,11 @@
   }
   &__list {
     display: flex;  
-   justify-content: center;
+    justify-content: center;
   }
- &__item-title {
-  margin-top: 40px;
-   margin-bottom: 12px;
+  &__item-title {
+    margin-top: 40px;
+    margin-bottom: 12px;
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
@@ -61,23 +61,22 @@
     width: 110px;
     height: 110px;
     border: 1px solid #E0E0E0;
-}
-    &__icon {
-      position: relative;
+  }
+  &__icon-wrapper-2 {
     display: flex;
-align-items: center;
-justify-content: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
     width: 90px;
     height: 90px;
-    border-radius: 50%;
     border: 1px solid #4985FF;
-    box-sizing: border-box;
   }
-  &__icon--pos{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50, -50);
+  &__icon {
+   
+    width: 40px;
+    height: 40px;
+    fill: #4985FF;
+    box-sizing: border-box;
   }
   
 }
