--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,14 +4,14 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './variables/variables';
+@import './variables/container';
 @import './hero';
 @import './our-progect';
-@import './variables/container';
-@import './variables/variables';
 @import './layouts/page-works';
-@import './components/our_works';
+@import './layouts/our_works';
 @import './variables/features';
 @import './page_header/navigation';
 @import './subcribe/subcribe';
-
+@import './layouts/page-footer';
 
