--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,7 +7,7 @@
             <div class="reviews__image">
     <a href="" class="reviews__link link" target="_blank" rel="noopener noreferrer" lang=en>
                 <svg class="reviews__icon" width="50px" height="50px">
-                    <use href="./images/icons.svg#icon-behance"></use>
+                    <use href="./images/icons/icons.svg#icon-behance"></use>
                 </svg>
     Behance
     </a>
@@ -22,7 +22,7 @@
             <div class="reviews__image">
     <a href="" class="reviews__link link" target="_blank" rel="noopener noreferrer" lang=en>
                 <svg class="reviews__icon" width="50px" height="50px">
-                    <use href="./images/icons.svg#icon-vimeo2"></use>
+                    <use href="./images/icons/icons.svg#icon-vimeo2"></use>
                 </svg>
      Vimeo
     </a>
@@ -37,7 +37,7 @@
             <div class="reviews__image">
     <a href="" class="reviews__link link" target="_blank" rel="noopener noreferrer" lang=en>
                 <svg class="reviews__icon" width="50px" height="50px">
-                    <use href="./images/icons.svg#icon-underline"></use>
+                    <use href="./images/icons/icons.svg#icon-underline"></use>
                 </svg>
              UpWork
     </a>
