--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,76 +1,102 @@
-.reviews__container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:center;
-    padding-top: 60px;
-    padding-bottom: 60px;
- } 
-
-.reviews{
-    &__item{
-        &:not(:last-child){
-    margin-bottom: 30px;
-    }
+.reviews__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-    &__image{
-        display: flex;
-        align-items: center;
-         height: 120px;
-         margin-bottom: 10px;
-         background-color: var(--section-color);
-         border-radius: 4px;
-     }
-     &__link {
-        font-family: var(--main-font);
-        font-weight: bold;
-        font-size: 24px;
-        line-height:1.14;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        
-        color: var(--accent-color);
+
+.reviews {
+  &__item {
+    background-color: #f5f4fa;
+    border-radius: 4px;
+    padding: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  &__image {
+    margin-bottom: 10px;
+    background-color: var(--section-color);
+  }
+
+  &__icon {
+    margin-right: 15px;
+  }
+
+  &__link {
+    font-family: var(--main-font);
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--accent-color);
+
+    &:hover{
+        color: #000;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    &__client-link {
-        font-family: var(--main-font);
-        font-weight: bold;
-        font-size: 14px;
-        line-height:1.14;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        
-        color: var(--main-color);
-        margin-bottom: 10px;
+    &:hover .reviews__icon {
+        fill: var(--accent-color);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &__description {
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        margin-bottom: 10px;
-        color: var(--secondary-collor);
-    }
+  }
+
+  &__client-link {
+    font-family: var(--main-font);
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 2;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #000;
+    margin-bottom: 10px;
+  }
+  &__description {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-bottom: 10px;
+    color: #757575;
+  }
+
+  &__icon--blue {
+    fill: #2962ff;
+  }
+  &__icon--light-blue{
+      fill: #3FACD5;
+  }
+  &__icon--green{
+      width: 50px;
+      height: 50px;
+      fill:#7CCA3E;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .reviews__list{
+  .reviews__list {
     display: flex;
     flex-wrap: wrap;
-    }
+  }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px)  {
-    .reviews__container{
-        padding-top: 94px;
-        padding-bottom: 94px;
-     }
-     .reviews__list{
-    margin:-15px;
-    }
-    .reviews__item{
-        margin: 15px;
-        width: 354px;
-    }
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .reviews__container {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .reviews__list {
+    margin: -15px;
+  }
+  .reviews__item {
+    margin: 15px;
+    width: 354px;
+  }
 }
