block-feed-back

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import './components/form';
 @import './components/contacts';
 @import './components/contacts__map';
+@import './components/_feed-back-form';
 
 @import './layout/header';
 @import './layout/footer';
