создала блок контакты

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,3 +1,48 @@
-.contacts__box{
-    height: 300px;
+.block-contacts {
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  &__item {
+    width: 100%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 6 * 15px) / 3);
+      margin: 15px;
+      background-color: #f5f4fa;
+      border-radius: 4px;
+    }
+  }
+
+  &__title {
+    font-family: var(--main-font);
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 2;
+     letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #000;
+    margin-bottom: 10px;
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+        font-size: 16px;
+    }
+  }
+  &__text{
+    font-size: 17px;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: var(--text-color);
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {    
+    font-size: 14px;
+}
+  }
 }
