--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
         <ul class="navigation__list list">
           <li class="navigation__item">
             <a
-              class="navigation__link navigation__link--current link"
+              class="navigation__link link"
               href="./index.html"
               >Студия</a
             >
@@ -18,7 +18,7 @@
             >
           </li>
           <li class="navigation__item">
-            <a class="navigation__link link" href="#">Контакты</a>
+            <a class="navigation__link navigation__link--current link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
