--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -45,4 +45,10 @@
     font-size: 14px;
 }
   }
+
+  &__text--active:hover{
+      color: var(--accent-color);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      cursor: pointer;
+  }
 }
