added architecture and normalize

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,20 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './base/base';
+@import './base/container';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './components/modal-btn';
+@import './components/section-title';
+@import './components/modal';
+@import './components/mobile-menu';
+@import './components/social-links';
+
+@import './layout/header-hero';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/customer-reviews';
+@import './layout/contacts';
+@import './layout/footer';
+
+@import './utils/variables';
+@import './utils/visually-hidden';
