added advantages section html

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,7 +1,29 @@
 <section class="advantages">
     <div class="container">
-        <h2 class="section-title">Advantages</h2>
-        <!-- <picture src="https://github.com/Kyle-Roman/parcel-project-group-9/src/images/mobile/about/cow.jpg" alt="" class="img-adv"></picture>         -->
+        <h2 class="section-title visually-hidden">Advantages</h2>
+        <ul class="advantages-list list">
+            <li class="advantages-list__item">
+                <svg class="advatages-list_img">
+                    <use class="advantages-list_icon" href="../images/icons.svg#bucket_milk"></use>
+                </svg>
+                <h2 class="advantages-list__title">721</h2>
+                <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages-list__item">
+                <svg class="advatages-list_img">
+                    <use class="advantages-list_icon" href="../images/icons.svg#bucket_apple"></use>
+                </svg>
+                <h2 class="advantages-list__title">16kg</h2>
+                <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="advantages-list__item">
+                <svg class="advatages-list_img">
+                    <use class="advantages-list_icon" href="../images/icons.svg#heart-lollypop"></use>
+                </svg>
+                <h2 class="advantages-list__title">84</h2>
+                <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+        </ul>
     </div>
 </section>
 
