--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,23 +3,23 @@
         <h2 class="section-title visually-hidden">Advantages</h2>
         <ul class="advantages-list list">
             <li class="advantages-list__item">
-                <!-- <svg class="advatages-list_img">
+                <svg class="advatages-list_img">
                     <use class="advantages-list_icon" href="../images/icons.svg#bucket_milk"></use>
-                </svg> -->
+                </svg>
                 <h3 class="advantages-list__title">721</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantages-list__item">
-                <!-- <svg class="advatages-list_img">
+                <svg class="advatages-list_img">
                     <use class="advantages-list_icon" href="../images/icons.svg#bucket_apple"></use>
-                </svg> -->
+                </svg>
                 <h3 class="advantages-list__title">16kg</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantages-list__item">
-                <!-- <svg class="advatages-list_img">
+                <svg class="advatages-list_img">
                     <use class="advantages-list_icon" href="../images/icons.svg#heart-lollypop"></use>
-                </svg> -->
+                </svg>
                 <h3 class="advantages-list__title">84</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
