--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -18,7 +18,7 @@
             </li>
             <li class="advantages-list__item">
                 <svg class="advatages-list_img">
-                    <use class="advantages-list_icon" href="../src/images/icons.svg#heart-lollypop"></use>
+                    <use class="advantages-list_icon" href="../src/images/icons.svg#heart_lollypop"></use>
                 </svg>
                 <h3 class="advantages-list__title">84</h3>
                 <p class="advantages-list__about">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
