--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import './components/modal-btn';
 @import './components/section-title';
+@import './components/subtitle';
 @import './components/modal';
 @import './components/mobile-menu';
 @import './components/social-links';
