--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,7 @@
-<footer class="footer">
-<h2 class="visually-hidden">Social contacts</h2>
-<p class="description">homemade ice cream made <span>with passion</span></p>
+<footer class="footer"> 
+<div class="container">
+<p class="suptitle">homemade ice cream made</p>
+<h2 class="section-title"> with passion </h2>
 <ul class="social-list">
     <li class="social-list__item">
         <a class="social-list__link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
@@ -25,7 +26,7 @@
     </li>
 </ul>
 
-<b class="call"> Feel free to contact <a class="tel" href="tel:610383766284">+61 (0) 383 766 284</a></b>
+<b class="call"> Feel free to contact <a class="tel" href="tel:+610383766284">+61 (0) 383 766 284</a></b>
 <div class="copyright"> &copy;2019 - IceCream. All Rights Reserved.</div>
-
+</div>
 </footer>
