--- a/src/sass/components/_subtitle.scss
+++ b/src/sass/components/_subtitle.scss
@@ -1,6 +1,6 @@
 .subtitle {
   color: var(--accent-color-secondary);
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   text-transform: uppercase;
 }
