--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -25,7 +25,42 @@
   color: var(--secondary-text-color);
 }
 
-.advantages-list_icon {
-  height: 50px;
+.advantages-list__icon-wrapper {
+  display: block;
+  justify-content: left;
+  align-items: center;
+}
+
+.advatages-list__img {
   width: 50px;
+  height: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .advantages-list__item {
+    flex-basis: calc(100% / 3 - 60px);
+    min-width: 180px;
+
+    &:not(:last-child) {
+      margin-right: 60px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .advantages-list__item {
+    flex-basis: calc(100% / 3 - 30px);
+    min-width: 180px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
