button styles added

--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -27,10 +27,7 @@
   margin-right: auto;
   background-color: var(--background-color-accent);
 }
-.hero__images-container {
-  position: relative;
-  height: 446px;
-}
+
 .hero__image {
   width: 171px;
   position: absolute;
@@ -40,6 +37,16 @@
 .hero {
   position: relative;
   height: 446px;
+}
+.hero__bioeco-info-image {
+  width: 124px;
+}
+
+.hero__image-woman {
+  width: 168px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 .title-wrapper {
   position: absolute;
@@ -73,7 +80,8 @@
 @media screen and (max-width: 767px) {
   .hero__counters-wrapper,
   .hero__bioeco-info,
-  .hero__image-woman {
+  .hero__image-woman,
+  .header .modal-btn {
     display: none;
   }
 }
